crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_branch_content_collapsed_hidden.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service(props()).connect(&|_|\n{}).branch_content_attrs(&key(4)))"
---
data-ars-part=branch-content
data-ars-scope=tree-view
hidden=true
role=group
