crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_branch_control_href.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service(props().items(linked_branch)).connect(&|_|\n{}).branch_control_attrs(&key(1)))"
---
data-ars-part=branch-control
data-ars-scope=tree-view
href=/fruits
