crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_branch_dnd_enabled.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service(dnd_props()).connect(&|_| {}).branch_attrs(&key(1)))"
---
aria-expanded=true
aria-level=1
aria-posinset=1
aria-roledescription=draggable
aria-selected=false
aria-setsize=3
data-ars-expanded=true
data-ars-part=branch
data-ars-scope=tree-view
id=tree-node-i-1
role=treeitem
