crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_branch_selected.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&selected.connect(&|_| {}).branch_attrs(&key(1)))"
---
aria-expanded=true
aria-level=1
aria-posinset=1
aria-selected=true
aria-setsize=3
data-ars-expanded=true
data-ars-part=branch
data-ars-scope=tree-view
data-ars-selected=true
id=tree-node-i-1
role=treeitem
